Fixed contact form overlapping label

--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -247,7 +247,7 @@
 		label {
 			position: absolute;
 			top: 7px;
-			left: 8px;
+			left: 23px;
 			font-size: 15px;
 			z-index: 5;
 			color: #9e9e9e;
